tests/suite/fail/generated/types/fail_mul_string_f64.ny
fn main() {
    let _ = "a" * 1.0 //~ ERROR type mismatch in `arithmetic` operation
}
